// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rehydrating from DOM nodes should rehydrate the renderer cache 1`] = `
Array [
  10,
  Object {
    " #id > .foo ~ barWebkitBackgroundColorred;background-color:red": Object {
      "className": "e",
      "declaration": "-webkit-background-color:red;background-color:red",
      "media": "",
      "pseudo": " #id > .foo ~ bar",
      "selector": ".e #id > .foo ~ bar",
      "support": "",
      "type": "RULE",
    },
    "(display: grid) .foo.barcolorred": Object {
      "className": "h",
      "declaration": "color:red",
      "media": "",
      "pseudo": " .foo.bar",
      "selector": ".h .foo.bar",
      "support": "(display: grid)",
      "type": "RULE",
    },
    "(display: grid)colorblue": Object {
      "className": "g",
      "declaration": "color:blue",
      "media": "",
      "pseudo": "",
      "selector": ".g",
      "support": "(display: grid)",
      "type": "RULE",
    },
    ":hover> h1colorgreen": Object {
      "className": "j",
      "declaration": "color:green",
      "media": "",
      "pseudo": ":hover> h1",
      "selector": ".j:hover> h1",
      "support": "",
      "type": "RULE",
    },
    ":hovercolorred": Object {
      "className": "i",
      "declaration": "color:red",
      "media": "",
      "pseudo": ":hover",
      "selector": ".i:hover",
      "support": "",
      "type": "RULE",
    },
    "WebkitBackgroundColorred;background-color:red": Object {
      "className": "c",
      "declaration": "-webkit-background-color:red;background-color:red",
      "media": "",
      "pseudo": "",
      "selector": ".c",
      "support": "",
      "type": "RULE",
    },
    "WebkitFlex1;-ms-flex:1;flex:1": Object {
      "className": "d",
      "declaration": "-webkit-flex:1;-ms-flex:1;flex:1",
      "media": "",
      "pseudo": "",
      "selector": ".d",
      "support": "",
      "type": "RULE",
    },
    "[alt=\\"Hello\\"]fontSize12px": Object {
      "className": "f",
      "declaration": "font-size:12px",
      "media": "",
      "pseudo": "[alt=\\"Hello\\"]",
      "selector": ".f[alt=\\"Hello\\"]",
      "support": "",
      "type": "RULE",
    },
    "coloryellow": Object {
      "className": "b",
      "declaration": "color:yellow",
      "media": "",
      "pseudo": "",
      "selector": ".b",
      "support": "",
      "type": "RULE",
    },
  },
]
`;

exports[`Rehydrating from DOM nodes should rehydrate the renderer cache 2`] = `
Array [
  10,
  Object {
    " #id > .foo ~ barWebkitBackgroundColorred;background-color:red": Object {
      "className": "e",
      "declaration": "-webkit-background-color:red;background-color:red",
      "media": "",
      "pseudo": " #id > .foo ~ bar",
      "selector": ".parentClass .e #id > .foo ~ bar",
      "support": "",
      "type": "RULE",
    },
    "(display: grid) .foo.barcolorred": Object {
      "className": "h",
      "declaration": "color:red",
      "media": "",
      "pseudo": " .foo.bar",
      "selector": ".parentClass .h .foo.bar",
      "support": "(display: grid)",
      "type": "RULE",
    },
    "(display: grid)colorblue": Object {
      "className": "g",
      "declaration": "color:blue",
      "media": "",
      "pseudo": "",
      "selector": ".parentClass .g",
      "support": "(display: grid)",
      "type": "RULE",
    },
    ":hover> h1colorgreen": Object {
      "className": "j",
      "declaration": "color:green",
      "media": "",
      "pseudo": ":hover> h1",
      "selector": ".parentClass .j:hover> h1",
      "support": "",
      "type": "RULE",
    },
    ":hovercolorred": Object {
      "className": "i",
      "declaration": "color:red",
      "media": "",
      "pseudo": ":hover",
      "selector": ".parentClass .i:hover",
      "support": "",
      "type": "RULE",
    },
    "WebkitBackgroundColorred;background-color:red": Object {
      "className": "c",
      "declaration": "-webkit-background-color:red;background-color:red",
      "media": "",
      "pseudo": "",
      "selector": ".parentClass .c",
      "support": "",
      "type": "RULE",
    },
    "WebkitFlex1;-ms-flex:1;flex:1": Object {
      "className": "d",
      "declaration": "-webkit-flex:1;-ms-flex:1;flex:1",
      "media": "",
      "pseudo": "",
      "selector": ".parentClass .d",
      "support": "",
      "type": "RULE",
    },
    "[alt=\\"Hello\\"]fontSize12px": Object {
      "className": "f",
      "declaration": "font-size:12px",
      "media": "",
      "pseudo": "[alt=\\"Hello\\"]",
      "selector": ".parentClass .f[alt=\\"Hello\\"]",
      "support": "",
      "type": "RULE",
    },
    "coloryellow": Object {
      "className": "b",
      "declaration": "color:yellow",
      "media": "",
      "pseudo": "",
      "selector": ".parentClass .b",
      "support": "",
      "type": "RULE",
    },
  },
]
`;
